manifests/infrastructure/controllers/ingress/traefik-forward-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: ingress
  labels:
    app: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      containers:
        - image: thomseddon/traefik-forward-auth:2.2.0-arm
          name: traefik-forward-auth
          ports:
          - containerPort: 4181
            protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 4181
            initialDelaySeconds: 20
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
            timeoutSeconds: 2
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-forward-auth
  namespace: ingress
spec:
  selector:
    app: traefik-forward-auth
  ports:
    - port: 80
      targetPort: 4181
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-forward-auth
  namespace: ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: ingress-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: auth.cluster.rebelinblue.com
      http:
       paths:
          - backend:
              service:
                name: traefik-forward-auth
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - auth.cluster.rebelinblue.com
      secretName: auth-tls
